--- a/project 1.ipynb
+++ b/project 1.ipynb
@@ -21,7 +21,7 @@
     }
    ],
    "source": [
-    "#refer project_1_prereq file\n",
+    "#refer project_1_prereq file \n",
     "#run ollama pull llama3.2 and uv add openai and then execute uv sync to add openai to your virtual environment\n",
     "from openai import OpenAI\n",
     "MODEL=\"llama3.2\"\n",
@@ -35,17 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "6cd16f45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"**Summary of Microsoft Website Content**\\n======================================\\n\\n### Overview\\n\\nThe website is the official homepage of Microsoft, featuring various products and services such as Windows, Office, Azure, and Xbox.\\n\\n### Navigation\\n\\n*   **Product Hub**: Offers information on Surface Laptops, Microsoft Copilot, Microsoft 365, Windows 11 apps, and more.\\n*   **Business**: Features solutions for small business owners, including Microsoft Cloud, Dynamics 365, Microsoft Power Platform, and Microsoft Teams.\\n*   **Developer & IT**: Dedicated for developers and IT professionals, with resources on Azure, Developer Center, Documentation, and Visual Studio.\\n*   **Company**: Provides information on Microsoft's history, company news, diversity and inclusion, accessibility, sustainability, and careers.\\n\\n### Features\\n\\n*   **Surface Laptops**: Latest models, such as the Surface Laptop Studio 2 and Surface Laptop Go, with features like flexible payments.\\n*   **Microsoft Copilot**: An AI-powered tool that assists users in Windows applications.\\n*   **Microsoft Teams**: A communication platform for teams.\\n*   **Azure**: Microsoft's cloud computing service.\\n\\n### Support\\n\\n*   **Microsoft Store**: Offers a promise of certified refurbished devices and flexible payment options.\\n*   **Returns & Order Tracking**: Information on returning or tracking purchases.\\n*   **Support**: Resources for troubleshooting issues with Microsoft products.\\n\\n**Additional Sections**\\n-----------------------\\n\\n*   **Education**: Solutions for schools, including Devices for Education, Microsoft Teams for Education, and Azure for Students.\\n*   **Games**: Xbox games, PC games, movies, and TV.\\n*   **Rewards**: Free downloads, security resources, and rewards programs available.\""
+       "\"# Microsoft Website Summary\\n\\n## Introduction\\n\\nThe website appears to be a homepage for Microsoft's official portal, featuring various sections such as products, services, and resources.\\n\\n### Product and Service Sections\\n\\n* **Surface**:\\n\\t+ Surface Laptop Studio 2\\n\\t+ Surface Laptop Go\\n\\t+ Surface Pro 9\\n\\t+ Surface Laptop 5\\n* **Microsoft Products**:\\n\\t+ Windows\\n\\t+ Windows 11 apps\\n\\t+ Microsoft Store\\n* **Office Software**:\\n\\t+ Microsoft Office\\n* **Gaming**:\\n\\t+ Xbox\\n\\t+ Xbox Game Pass Ultimate\\n\\n## Business and Education Sections\\n\\n* **Microsoft Cloud**:\\n\\t+ Azure\\n\\t+ Dynamics 365\\n\\t+ Microsoft 365\\n\\t+ Microsoft Power Platform\\n* **Education**:\\n\\t+ Devices for education\\n\\t+ Microsoft Teams for Education\\n\\t+ Microsoft 365 Education\\n* **Microsoft in Education**:\\n\\t+ How to buy for your school\\n\\t+ Educator training and development\\n\\t+ Deals for students and parents\\n\\n## Developer and IT Sections\\n\\n* **Developer Center**:\\n\\t+ Azure\\n\\t+ Developer Center\\n\\t+ Documentation\\n* **Visual Studio**:\\n\\t+ Product information\\n* **Microsoft Security**:\\n\\t+ Updates and security alerts\\n\\n## Company Information Section\\n\\n* **About Microsoft**:\\n\\t+ News\\n\\t+ Careers\\n\\t+ About our company\\n* **Innovations**:\\n\\t+ Sustainability\\n\\t+ Recycling\\n\\t+ Eco initiatives\\n\\n## Navigation Menu\\n\\n* **Quick links**: to popular sections such as Surface, Windows, and Deals\\n* **Sitemap**: for easier navigation\\n\\nNote: This summary represents the main content topics covered by the website at the time of data cutoff.\""
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,6 +106,100 @@
     "    return response.choices[0].message.content\n",
     "\n",
     "summarize_website_markdown(\"https://www.microsoft.com/en-in\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6374165",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "693212bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'chatcmpl-323', 'object': 'chat.completion', 'created': 1764490432, 'model': 'llama3.2', 'system_fingerprint': 'fp_ollama', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': 'Here\\'s one:\\n\\nDid you know that there is a species of jellyfish that is immortal?! The Turritopsis dohrnii, also known as the \"immortal jellyfish,\" can transform its body into a younger state through a process called transdifferentiation. This means it can essentially revert back to its polyp stage and start its life cycle all over again, making it theoretically immortal!\\n\\nIsn\\'t that mind-blowing?'}, 'finish_reason': 'stop'}], 'usage': {'prompt_tokens': 31, 'completion_tokens': 89, 'total_tokens': 120}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"http://localhost:11434/v1/chat/completions\"\n",
+    "\n",
+    "headers = {\n",
+    "    \"Content-Type\": \"application/json\",\n",
+    "    \"Authorization\": \"Bearer none\"   # Ollama ignores this\n",
+    "}\n",
+    "\n",
+    "payload = {\n",
+    "    \"model\": \"llama3.2\",\n",
+    "    \"messages\": [\n",
+    "        {\"role\": \"user\", \"content\": \"Tell me a fun fact!\"}\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, headers=headers, json=payload)\n",
+    "\n",
+    "print(response.json())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ea002133",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's one: Did you know that there is a species of jellyfish that is immortal?! The Turritopsis dohrnii, also known as the \"immortal jellyfish,\" can transform its body into a younger state through a process called transdifferentiation. This means it can essentially revert back to its polyp stage and start its life cycle all over again, making it theoretically immortal! Isn't that mind-blowing?\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = response.json()\n",
+    "text = result[\"choices\"][0][\"message\"][\"content\"]\n",
+    "\n",
+    "# convert to a paragraph\n",
+    "paragraph = \" \".join(text.split())\n",
+    "\n",
+    "print(paragraph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "684bc71d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here's one:\n",
+      "\n",
+      "Did you know that honey never spoils? Archaeologists have found pots of honey in ancient Egyptian tombs that are over 3,000 years old and still somehow edible. Honey's longevity is due to its unique composition: it contains hydrogen peroxide, which acts as a natural antibacterial agent, making it virtually impossible for bacteria, yeast, or mold to grow. So go ahead and indulge in that honey on your toast – it'll be around for centuries!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openai import OpenAI\n",
+    "MODEL=\"llama3.2\"\n",
+    "client = OpenAI(base_url=\"http://localhost:11434/v1\", api_key=\"not_needed\") \n",
+    "response = client.chat.completions.create(\n",
+    "    model=MODEL,\n",
+    "     messages=[{\"role\": \"user\", \"content\": \"Give me a fun fact.\"}])\n",
+    "print(response.choices[0].message.content)"
    ]
   }
  ],
